# mapped_futures

./: Cargo.toml  README.md
src/: bi_multi_map_streams.rs  iter.rs  lib.rs  mapped_streams.rs  ready_to_run_queue.rs  task.rs
src/futures_unordered/: iter.rs  mod.rs  ready_to_run_queue.rs  task.rs
src/mapped_futures/: bi_multi_map_futures.rs  bi_multi_map_streams.rs  iter.rs  mapped_streams.rs  mod.rs  ready_to_run_queue.rs  task.rs
