[package]
name = "mapped_futures"
version = "0.1.10"
edition = "2021"
license = "GPL-3.0"
keywords = ["future", "FuturesUnordered", "HashMap", "async", "stream"]
categories = ["asynchronous"]
description = "A collection of futures based on FuturesUnordered that supports insertion, removal and mutation of futures by key"
repository = "https://github.com/StoicDeveloper/mapped_futures"

[dependencies]
futures-core = "0.3.28"
futures-task = "0.3.28"
futures-util = "0.3.28"
bisetmap = "0.1.6"

[dev-dependencies]
futures = "0.3.0"
futures-timer = "3.0.2"
futures-lite = "1.12.0"
