[package]
name = "mapped_futures"
version = "0.2.0"
edition = "2021"
license = "MIT"
keywords = ["future", "FuturesUnordered", "HashMap", "async", "stream"]
categories = ["asynchronous"]
description = "A collection of futures based on FuturesUnordered that supports insertion, removal and mutation of futures by key"
repository = "https://github.com/StoicDeveloper/mapped_futures"

[dependencies]
futures-core = "0.3.31"
futures-task = "0.3.31"
futures-util = "0.3.31"
bisetmap = "0.1.6"

[dev-dependencies]
futures = "0.3.0"
futures-timer = "3.0.3"
futures-lite = "1.12.0"
